crates/oxc_angular_compiler/tests/snapshots/integration_test__jit_reference_angular_member_decorators.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: result.code
---
import { Injectable, Inject, Optional, Input, Output, ViewChild, HostListener, HostBinding, ContentChild } from "@angular/core";
import { __decorate } from "tslib";
let MyService = class MyService {
	myInput = "";
	isActive = false;
	onClick(event) {}
	constructor(token, optService) {
		this.token = token;
		this.optService = optService;
	}
	normalMethod() {}
	static ctorParameters = () => [{
		type: undefined,
		decorators: [{
			type: Inject,
			args: ["TOKEN"]
		}]
	}, {
		type: undefined,
		decorators: [{ type: Optional }]
	}];
	static propDecorators = {
		myInput: [{ type: Input }],
		myOutput: [{ type: Output }],
		myViewChild: [{
			type: ViewChild,
			args: ["ref"]
		}],
		isActive: [{
			type: HostBinding,
			args: ["class.active"]
		}],
		onClick: [{
			type: HostListener,
			args: ["click", ["$event"]]
		}],
		myContent: [{
			type: ContentChild,
			args: ["content"]
		}]
	};
};
MyService = __decorate([Injectable()], MyService);
